# BulletTank

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
SDL2/x64/include/SDL2/: SDL_image.h
SDL2/x64/lib/cmake/SDL2_image/: sdl2_image-config.cmake
SDL2_x86_mingw32/lib/cmake/SDL2/: sdl2-config.cmake
app/include/: App_SDL.h  GameWindow.h  ImageBuffer.h
app/src/: App_SDL.cpp  GameWindow.cpp  ImageBuffer.cpp
game/include/: TankEntity.h
game/src/: TankEntity.cpp
